export const snapshot = {};

snapshot[`client() can make requests > post 1`] = `
{
  active_lock_reason: null,
  assignee: null,
  assignees: [],
  author_association: "MEMBER",
  body: null,
  closed_at: null,
  closed_by: null,
  comments: 0,
  comments_url: "https://api.github.com/repos/withroka/test/issues/68/comments",
  created_at: "2025-10-21T19:51:18Z",
  events_url: "https://api.github.com/repos/withroka/test/issues/68/events",
  html_url: "https://github.com/withroka/test/issues/68",
  id: 3537970697,
  issue_dependencies_summary: {
    blocked_by: 0,
    blocking: 0,
    total_blocked_by: 0,
    total_blocking: 0,
  },
  labels: [],
  labels_url: "https://api.github.com/repos/withroka/test/issues/68/labels{/name}",
  locked: false,
  milestone: null,
  node_id: "I_kwDON5PmBc7S4SYJ",
  number: 68,
  performed_via_github_app: null,
  reactions: {
    "+1": 0,
    "-1": 0,
    confused: 0,
    eyes: 0,
    heart: 0,
    hooray: 0,
    laugh: 0,
    rocket: 0,
    total_count: 0,
    url: "https://api.github.com/repos/withroka/test/issues/68/reactions",
  },
  repository_url: "https://api.github.com/repos/withroka/test",
  state: "open",
  state_reason: null,
  sub_issues_summary: {
    completed: 0,
    percent_completed: 0,
    total: 0,
  },
  timeline_url: "https://api.github.com/repos/withroka/test/issues/68/timeline",
  title: "Test issue",
  type: null,
  updated_at: "2025-10-21T19:51:18Z",
  url: "https://api.github.com/repos/withroka/test/issues/68",
  user: {
    avatar_url: "https://avatars.githubusercontent.com/u/5593188?v=4",
    events_url: "https://api.github.com/users/tugrulates/events{/privacy}",
    followers_url: "https://api.github.com/users/tugrulates/followers",
    following_url: "https://api.github.com/users/tugrulates/following{/other_user}",
    gists_url: "https://api.github.com/users/tugrulates/gists{/gist_id}",
    gravatar_id: "",
    html_url: "https://github.com/tugrulates",
    id: 5593188,
    login: "tugrulates",
    node_id: "MDQ6VXNlcjU1OTMxODg=",
    organizations_url: "https://api.github.com/users/tugrulates/orgs",
    received_events_url: "https://api.github.com/users/tugrulates/received_events",
    repos_url: "https://api.github.com/users/tugrulates/repos",
    site_admin: false,
    starred_url: "https://api.github.com/users/tugrulates/starred{/owner}{/repo}",
    subscriptions_url: "https://api.github.com/users/tugrulates/subscriptions",
    type: "User",
    url: "https://api.github.com/users/tugrulates",
    user_view_type: "public",
  },
}
`;

snapshot[`client() can make requests > get 1`] = `
{
  active_lock_reason: null,
  assignee: null,
  assignees: [],
  author_association: "MEMBER",
  body: null,
  closed_at: null,
  closed_by: null,
  comments: 0,
  comments_url: "https://api.github.com/repos/withroka/test/issues/68/comments",
  created_at: "2025-10-21T19:51:18Z",
  events_url: "https://api.github.com/repos/withroka/test/issues/68/events",
  html_url: "https://github.com/withroka/test/issues/68",
  id: 3537970697,
  issue_dependencies_summary: {
    blocked_by: 0,
    blocking: 0,
    total_blocked_by: 0,
    total_blocking: 0,
  },
  labels: [],
  labels_url: "https://api.github.com/repos/withroka/test/issues/68/labels{/name}",
  locked: false,
  milestone: null,
  node_id: "I_kwDON5PmBc7S4SYJ",
  number: 68,
  performed_via_github_app: null,
  reactions: {
    "+1": 0,
    "-1": 0,
    confused: 0,
    eyes: 0,
    heart: 0,
    hooray: 0,
    laugh: 0,
    rocket: 0,
    total_count: 0,
    url: "https://api.github.com/repos/withroka/test/issues/68/reactions",
  },
  repository_url: "https://api.github.com/repos/withroka/test",
  state: "open",
  state_reason: null,
  sub_issues_summary: {
    completed: 0,
    percent_completed: 0,
    total: 0,
  },
  timeline_url: "https://api.github.com/repos/withroka/test/issues/68/timeline",
  title: "Test issue",
  type: null,
  updated_at: "2025-10-21T19:51:18Z",
  url: "https://api.github.com/repos/withroka/test/issues/68",
  user: {
    avatar_url: "https://avatars.githubusercontent.com/u/5593188?v=4",
    events_url: "https://api.github.com/users/tugrulates/events{/privacy}",
    followers_url: "https://api.github.com/users/tugrulates/followers",
    following_url: "https://api.github.com/users/tugrulates/following{/other_user}",
    gists_url: "https://api.github.com/users/tugrulates/gists{/gist_id}",
    gravatar_id: "",
    html_url: "https://github.com/tugrulates",
    id: 5593188,
    login: "tugrulates",
    node_id: "MDQ6VXNlcjU1OTMxODg=",
    organizations_url: "https://api.github.com/users/tugrulates/orgs",
    received_events_url: "https://api.github.com/users/tugrulates/received_events",
    repos_url: "https://api.github.com/users/tugrulates/repos",
    site_admin: false,
    starred_url: "https://api.github.com/users/tugrulates/starred{/owner}{/repo}",
    subscriptions_url: "https://api.github.com/users/tugrulates/subscriptions",
    type: "User",
    url: "https://api.github.com/users/tugrulates",
    user_view_type: "public",
  },
}
`;

snapshot[`client() can make requests > put 1`] = `{}`;

snapshot[`client() can make requests > delete 1`] = `{}`;

snapshot[`client() can make requests > patch 1`] = `
{
  active_lock_reason: null,
  assignee: null,
  assignees: [],
  author_association: "MEMBER",
  body: null,
  closed_at: "2025-10-21T19:51:20Z",
  closed_by: {
    avatar_url: "https://avatars.githubusercontent.com/u/5593188?v=4",
    events_url: "https://api.github.com/users/tugrulates/events{/privacy}",
    followers_url: "https://api.github.com/users/tugrulates/followers",
    following_url: "https://api.github.com/users/tugrulates/following{/other_user}",
    gists_url: "https://api.github.com/users/tugrulates/gists{/gist_id}",
    gravatar_id: "",
    html_url: "https://github.com/tugrulates",
    id: 5593188,
    login: "tugrulates",
    node_id: "MDQ6VXNlcjU1OTMxODg=",
    organizations_url: "https://api.github.com/users/tugrulates/orgs",
    received_events_url: "https://api.github.com/users/tugrulates/received_events",
    repos_url: "https://api.github.com/users/tugrulates/repos",
    site_admin: false,
    starred_url: "https://api.github.com/users/tugrulates/starred{/owner}{/repo}",
    subscriptions_url: "https://api.github.com/users/tugrulates/subscriptions",
    type: "User",
    url: "https://api.github.com/users/tugrulates",
    user_view_type: "public",
  },
  comments: 0,
  comments_url: "https://api.github.com/repos/withroka/test/issues/68/comments",
  created_at: "2025-10-21T19:51:18Z",
  events_url: "https://api.github.com/repos/withroka/test/issues/68/events",
  html_url: "https://github.com/withroka/test/issues/68",
  id: 3537970697,
  issue_dependencies_summary: {
    blocked_by: 0,
    blocking: 0,
    total_blocked_by: 0,
    total_blocking: 0,
  },
  labels: [],
  labels_url: "https://api.github.com/repos/withroka/test/issues/68/labels{/name}",
  locked: false,
  milestone: null,
  node_id: "I_kwDON5PmBc7S4SYJ",
  number: 68,
  performed_via_github_app: null,
  reactions: {
    "+1": 0,
    "-1": 0,
    confused: 0,
    eyes: 0,
    heart: 0,
    hooray: 0,
    laugh: 0,
    rocket: 0,
    total_count: 0,
    url: "https://api.github.com/repos/withroka/test/issues/68/reactions",
  },
  repository_url: "https://api.github.com/repos/withroka/test",
  state: "closed",
  state_reason: "completed",
  sub_issues_summary: {
    completed: 0,
    percent_completed: 0,
    total: 0,
  },
  timeline_url: "https://api.github.com/repos/withroka/test/issues/68/timeline",
  title: "Test issue",
  type: null,
  updated_at: "2025-10-21T19:51:20Z",
  url: "https://api.github.com/repos/withroka/test/issues/68",
  user: {
    avatar_url: "https://avatars.githubusercontent.com/u/5593188?v=4",
    events_url: "https://api.github.com/users/tugrulates/events{/privacy}",
    followers_url: "https://api.github.com/users/tugrulates/followers",
    following_url: "https://api.github.com/users/tugrulates/following{/other_user}",
    gists_url: "https://api.github.com/users/tugrulates/gists{/gist_id}",
    gravatar_id: "",
    html_url: "https://github.com/tugrulates",
    id: 5593188,
    login: "tugrulates",
    node_id: "MDQ6VXNlcjU1OTMxODg=",
    organizations_url: "https://api.github.com/users/tugrulates/orgs",
    received_events_url: "https://api.github.com/users/tugrulates/received_events",
    repos_url: "https://api.github.com/users/tugrulates/repos",
    site_admin: false,
    starred_url: "https://api.github.com/users/tugrulates/starred{/owner}{/repo}",
    subscriptions_url: "https://api.github.com/users/tugrulates/subscriptions",
    type: "User",
    url: "https://api.github.com/users/tugrulates",
    user_view_type: "public",
  },
}
`;
